# uwm-cs760-hw6

./: .gitignore  pyproject.toml
doc/: gan-base.ipynb  hw6.tex
src/: q1.py
src/hw6/: q1.py  q1_2.py  q1_3.py
