[tool.poetry]
name = "hw6"
version = "0.1.0"
description = ""
authors = ["Mondo <mondo.jiang@wisc.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
torch = "^2.1.1"
torchvision = "^0.16.1"
imageio = "^2.33.0"
numpy = "^1.26.2"
matplotlib = "^3.8.2"
tqdm = "^4.66.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
